# rag-scope

./: .gitignore  README.md  pyproject.toml  requirements.txt
rag_scope/: __init__.py
rag_scope/cli/: rscope.py
rag_scope/embeddings/: embed_type.py  embeddings_utils.py
rag_scope/retriever/: base.py  base_vector_store_retriever.py  combo_retriever.py  cross_encoder_rerank_retriever.py  engine.py  expand_answer_retriever.py  expand_query_retriever.py  query_vector_store_retriever.py
rag_scope/scripts/: build_vector_store.py  query_vector_store.py
rag_scope/ui/: app_context.py  home_view.py
rag_scope/ui/base/: base_presenter.py  base_view.py
rag_scope/ui/chatbot/: chatbot_view.py
rag_scope/ui/ingest/: ingest_view.py
rag_scope/ui/retriever/: base_retriever_view.py  combo_retriever_view.py  custom_retriever_view.py  retriever_select_view.py  vector_store_retriever_view.py
rag_scope/ui/settings/: settings_view.py
rag_scope/ui/settings/components/: embeddings_settings_view.py  llm_settings_view.py  vector_store_settings_view.py
rag_scope/ui/utils/: message_utils.py
rag_scope/ui/vector_store/: query_settings_view.py  vector_store_view.py
rag_scope/ui/visualization/: visualization_view.py
rag_scope/utils/: document_utils.py  import_utils.py  model_utils.py
rag_scope/vector_store/: embedding_extractor.py  search_type.py  vector_store_utils.py
rag_scope/vector_store/chroma/: chroma_vector_store.py
rag_scope/visualizer/: base_retrieval_visualizer.py  model_based_visualizer.py  pca_visualizer.py  plot_utils.py  tsne_visualizer.py  umap_visualizer.py
(+4 files in other folders)
